--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
     <ul id="deadline-list"></ul>
   </main>
 
+  <footer class="footer">
+  <p>
+    Built by <a href="https://yourusername.github.io" target="_blank">Your Name</a>
+  </p>
+</footer>
+
+
   <script src="app.js"></script>
 </body>
 </html>
