--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     </form>
 
     <ul id="deadline-list"></ul>
-  </main>
+  
 
   <footer class="footer">
   <p>
-    Built by <a href="https://yourusername.github.io" target="_blank">Your Name</a>
+    Built by <a href="https://github.com/jruiz132" target="_blank">Me</a>
   </p>
 </footer>
-
+</main>
 
   <script src="app.js"></script>
 </body>
